force-app/main/default/objects/datamask__DM_Object_Metadata__c/datamask__DM_Object_Metadata__c.object-meta.xml
<CustomObject>
    <label>Object Metadata</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>