force-app/main/default/objects/datamask__DM_Object_Metadata__c/fields/datamask__Status__c.field-meta.xml
<CustomField>
    <fullName>datamask__Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>