force-app/main/default/objects/datamask__DM_Object_Metadata__c/fields/datamask__Type__c.field-meta.xml
<CustomField>
    <fullName>datamask__Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>